[package]
name = "waves-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# crypto
bs58 = "0.4.0"
blake2 = "0.10.4"
sha3 = "0.10.2"
sha2 = "0.10.2"
curve25519-dalek = "4.0.0-pre.2"
ed25519-dalek = "1.0.1"
base64 = "0.13.0"

reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.82"

prost = "0.11.0"
tonic = "0.8.0"
thiserror = "1.0.32"

rand = "0.8.5"

anyhow = "1.0.62"

[build-dependencies]
tonic-build = "0.8"
protobuf-src = "1.0.5+3.19.3"


[[test]]
name = "integration"
path = "integration/main.rs"

