[package]
name = "waves-rust"
version = "0.2.1"
edition = "2021"
rust-version = "1.56"
authors = ["Waves Labs <admin@waveslabs.com>", "Alexandr Devyatkin <novealx@gmail.com>"]
description = """
A Rust library for interacting with the Waves blockchain.
Supports node interaction, offline transaction signing and creating addresses and keys.
"""
readme = "README.md"
keywords = [
    "blockchain",
    "async",
    "waves",
    "cryptography",
]
categories = [
    "blockchain",
    "cryptography"
]
repository = "https://github.com/wavesplatform/waves-rust"
license = "MIT"

[dependencies]
# crypto
bs58 = "0.4.0"
blake2 = "0.10.4"
sha3 = "0.10.2"
sha2 = "0.10.2"
# todo: use root crate when its dependencies will be resolved
curve25519-dalek = { git = "https://github.com/nazar-pc/curve25519-dalek", branch="relax-zeroize", version = "4.0.0-pre.2"}
ed25519-dalek = "1.0.1"
base64 = "0.13.0"
hex = "0.4.3"

# network
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.82"
regex = "1.6.0"
urlencoding = "2.1.0"
url = "2.2.2"

# protobuf
prost = "0.11.0"
tonic = "0.8.0"

# util
thiserror = "1.0.32"
rand = "0.8.5"

[lib]
doctest = false

[build-dependencies]
tonic-build = "0.8"
protobuf-src = "1.0.5+3.19.3"


[[test]]
name = "tests"
path = "tests/main.rs"

